<resources>
    <string name="app_name">BBC News</string>
    <string name="frontFeed">Front page</string>
    <string name="worldFeed">World</string>
    <string name="ukFeed">UK</string>
    <string name="businessFeed">Business</string>
    <string name="politicsFeed">Politics</string>
    <string name="healthFeed">Health</string>
    <string name="savedFeed">Saved reports</string>
    <string name="weatherFeed">Weather</string>
    <string name="settingsPage">Settings</string>
    <string name="title_activity_detailed_news">DetailedNews</string>
    <string name="title_activity_weather">Map</string>
    <string name="title_activity_settings">Settings</string>


    <string name="MainAbout">Welcome to the BBC news and Weather App, use the menu button to select a feed. created by Alexander MacDiarmid S1307325</string>
    <string name="FeedAbout">View the most recent news for the selected category. Tap a news story to get more information.</string>
    <string name="WeatherAbout">Tap the arrow to view more information for a city. Arrow shows wind direction, colour red greater than 10°C, orange between 0°C and 10, blue less than 0°C </string>
    <string name="SettingsAbout">personalize you experience with the app.</string>
    <string name="DetailedAbout">Press the web button to open this news in your web browser, press save to save this piece of news for reading latter.</string>
    <string name="SavedAbout">This shows all the news links you have saved, if any. Tap a view to open this article in your web browser</string>
    <string name="ErrorAbout">Sorry there was an error loading the dialog.</string>

    <string-array name="Map_array">
        <item>roadmap</item>
        <item>satellite</item>
        <item>hybrid</item>
        <item>terrain</item>
    </string-array>


    <!-- Strings related to Settings -->
</resources>
